kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shareinto
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
