kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: shareinto
spec:
  ports:
  - name: port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    deployment: blog
  type: NodePort
status:
  loadBalancer: {}
